--- a/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
+++ b/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
@@ -106,7 +106,8 @@
                             org.wso2.carbon.identity.application.mgt;version="${carbon.identity.framework.imp.pkg.version.range}",
                             org.wso2.carbon.identity.application.authentication.framework.*;version="${carbon.identity.framework.imp.pkg.version.range}",
 
-                            org.wso2.carbon.identity.oauth.dcr.*;version="${identity.inbound.auth.oauth.imp.pkg.version.range}"
+                            org.wso2.carbon.identity.oauth.dcr.*;version="${identity.inbound.auth.oauth.imp.pkg.version.range}",
+                            javax.servlet.http; version="${imp.pkg.version.javax.servlet}",
                         </Import-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.oidc.dcr.internal,
