--- a/pom.xml
+++ b/pom.xml
@@ -607,6 +607,7 @@
 
         <org.slf4j.verison>1.6.1</org.slf4j.verison>
         <com.google.code.gson.version>2.6.2</com.google.code.gson.version>
+        <com.google.code.gson.osgi.version.range>[2.6.2,3.0.0)</com.google.code.gson.osgi.version.range>
         <json-smart.version>1.3</json-smart.version>
 
         <!--Maven Plugin Version-->
