--- a/components/org.wso2.carbon.identity.webfinger/pom.xml
+++ b/components/org.wso2.carbon.identity.webfinger/pom.xml
@@ -85,6 +85,7 @@
                             org.wso2.carbon.user.core.*;version="${carbon.kernel.imp.pkg.version.range}",
                             org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.imp.pkg.version.range}",
                             com.google.gson;version="${com.google.code.gson.osgi.version.range}",
+                            org.wso2.carbon.identity.oauth2.*
                         </Import-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.webfinger.internal,
